[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/UI_MISC/Clickable.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65.0112, 72.6375 )

[node name="Clickable" type="Area2D" groups=[
"UI_Event",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.73422, -5.73419 )
shape = SubResource( 1 )
[connection signal="mouse_entered" from="." to="." method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Clickable_mouse_exited"]
[connection signal="trigger" from="." to="." method="_on_Clickable_trigger"]
