[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprites/UI/Tutorial_MouseINVERT.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/BE_Blank.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/UI_MISC/Tutorial_MouseWheel.gd" type="Script" id=3]
[ext_resource path="res://prefabs/UI/Clickable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UI/fadeCube.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/UI_MISC/Clickable.gd" type="Script" id=6]
[ext_resource path="res://prefabs/UI/Misc/HandOptionSelected.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/Misc/Events/UpdatePatchesOptions.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/UI/Dialogue/PatchesDialogTree/PM_07.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "MouseUp"
length = 2.0
loop = true
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite/BE_Blank:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.172852, -0.25, 0, 0.25, 0, 0.0872974, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.71 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite/BE_Blank:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -15.2532, -0.25, 0, 0.75, -1.53839, -65.0169, -0.68, 0.964508, 0.25, 0 ),
"times": PoolRealArray( 0, 1.35 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/BE_Blank:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.27, 1.5, 2.01 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="VisualShaderNodeScalarOp" id=2]
default_input_values = [ 0, 1.1, 1, 1.0 ]

[sub_resource type="VisualShaderNodeTexture" id=3]
texture = ExtResource( 5 )

[sub_resource type="VisualShaderNodeInput" id=4]
input_name = "color"

[sub_resource type="VisualShaderNodeVectorOp" id=5]
operator = 2

[sub_resource type="VisualShaderNodeScalarOp" id=6]
default_input_values = [ 0, 2.0, 1, 1.0 ]

[sub_resource type="VisualShaderNodeScalarFunc" id=7]
function = 0

[sub_resource type="VisualShaderNodeInput" id=8]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarOp" id=9]
default_input_values = [ 0, 0.0, 1, 2.0 ]
operator = 2

[sub_resource type="VisualShaderNodeScalarOp" id=10]
operator = 2

[sub_resource type="VisualShader" id=11]
code = "shader_type canvas_item;
uniform sampler2D tex_frg_2;



void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0 = COLOR.rgb;

// Input:7
	float n_out7p0 = TIME;

// ScalarFunc:6
	float n_out6p0 = sin(n_out7p0);

// ScalarOp:5
	float n_in5p0 = 2.00000;
	float n_out5p0 = n_in5p0 + n_out6p0;

// ScalarOp:8
	float n_out8p0 = dot(n_out3p0, vec3(0.333333, 0.333333, 0.333333)) * n_out5p0;

// Texture:2
	vec4 tex_frg_2_read = texture(tex_frg_2, UV.xy);
	vec3 n_out2p0 = tex_frg_2_read.rgb;
	float n_out2p1 = tex_frg_2_read.a;

// VectorOp:4
	vec3 n_out4p0 = vec3(n_out8p0) * n_out2p0;

// ScalarOp:10
	float n_in10p0 = 1.10000;
	float n_out10p0 = n_in10p0 + n_out6p0;

// ScalarOp:9
	float n_out9p0 = n_out10p0 * n_out2p1;

// Output:0
	COLOR.rgb = n_out4p0;
	COLOR.a = n_out9p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -934, 26.25 )
mode = 1
flags/light_only = false
nodes/fragment/2/node = SubResource( 3 )
nodes/fragment/2/position = Vector2( -180, 240 )
nodes/fragment/3/node = SubResource( 4 )
nodes/fragment/3/position = Vector2( -240, -40 )
nodes/fragment/4/node = SubResource( 5 )
nodes/fragment/4/position = Vector2( 140, 120 )
nodes/fragment/5/node = SubResource( 6 )
nodes/fragment/5/position = Vector2( -240, 40 )
nodes/fragment/6/node = SubResource( 7 )
nodes/fragment/6/position = Vector2( -580, 140 )
nodes/fragment/7/node = SubResource( 8 )
nodes/fragment/7/position = Vector2( -760, 140 )
nodes/fragment/8/node = SubResource( 9 )
nodes/fragment/8/position = Vector2( -20, -20 )
nodes/fragment/9/node = SubResource( 10 )
nodes/fragment/9/position = Vector2( 160, 320 )
nodes/fragment/10/node = SubResource( 2 )
nodes/fragment/10/position = Vector2( -340, 180 )
nodes/fragment/connections = PoolIntArray( 7, 0, 6, 0, 2, 1, 9, 1, 9, 0, 0, 1, 6, 0, 5, 1, 6, 0, 10, 1, 10, 0, 9, 0, 5, 0, 8, 1, 3, 0, 8, 0, 8, 0, 4, 0, 2, 0, 4, 1, 4, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 65.0112, 72.6375 )

[node name="Tutorial_MouseWheel" type="Node2D" groups=[
"UICustom",
]]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 832.273, 334.377 )
scale = Vector2( 0.646268, 0.646268 )
z_index = 20
z_as_relative = false
texture = ExtResource( 1 )

[node name="BE_Blank" type="Sprite" parent="Sprite"]
self_modulate = Color( 1, 1, 1, 0.681191 )
position = Vector2( 0.0880698, -65.0169 )
scale = Vector2( 0.0741052, 0.120133 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MouseUp = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
material = SubResource( 12 )
position = Vector2( 321.269, 257.901 )
scale = Vector2( 0.646667, 0.646667 )
z_index = -3
z_as_relative = false
texture = ExtResource( 5 )

[node name="Clickable" parent="Sprite2" instance=ExtResource( 4 )]
z_index = 20
z_as_relative = false

[node name="Sprite3" type="Sprite" parent="."]
visible = false
material = SubResource( 12 )
position = Vector2( 321.269, 128.307 )
scale = Vector2( 0.646667, 0.646667 )
z_index = -3
z_as_relative = false
texture = ExtResource( 5 )

[node name="Clickable2" type="Area2D" parent="Sprite3" groups=[
"UI_Event",
]]
z_index = 20
z_as_relative = false
script = ExtResource( 6 )
enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite3/Clickable2"]
position = Vector2( -5.73422, -5.73419 )
shape = SubResource( 13 )

[node name="HandOptionSelected" parent="." instance=ExtResource( 7 )]

[node name="UpdatePatchesOptions" parent="." instance=ExtResource( 8 )]
options = [ ExtResource( 9 ) ]
[connection signal="emit_click" from="Sprite2/Clickable" to="." method="_on_Clickable_emit_click"]
[connection signal="emit_click" from="Sprite3/Clickable2" to="." method="_on_Clickable_emit_click"]
[connection signal="mouse_entered" from="Sprite3/Clickable2" to="Sprite3/Clickable2" method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="Sprite3/Clickable2" to="Sprite3/Clickable2" method="_on_Clickable_mouse_exited"]
[connection signal="trigger" from="Sprite3/Clickable2" to="." method="_on_Clickable2_trigger"]
